--- a/app/views/dashboard/help.html.erb
+++ b/app/views/dashboard/help.html.erb
@@ -1,2 +1,5 @@
-<h1>Dashboard#help</h1>
-<p>Find me in app/views/dashboard/help.html.erb</p>
+<% provide(:title, "Help") %>
+<h1>Help</h1>
+<p>
+  This is the help page, later to be filled in with more "help"ful content.
+</p>
