--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Dashboard#home</h1>
-<p>Find me in app/views/dashboard/home.html.erb</p>
+<% provide(:title, "Home") %>
+<h1>Twitter App</h1>
+<p>
+  This is a homepage for the sample Twitter App.
+</p>
