--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -1,4 +1,12 @@
-<h1>Twitter App</h1>
-<p>
-  This is a homepage for the sample Twitter App.
-</p>
+<div class="center jumbotron">
+  <h1>Welcome to the Twitter App</h1>
+
+  <h2>
+    This is a homepage for the sample Twitter App.
+  </h2>
+
+
+  <%= link_to "Sign up now!", signup_path, class: 'btn btn-lg btn-primary' %>
+</div>
+
+<%= link_to image_tag('rails.png', alt: 'Rails logo'), 'http://rubyonrails.org/' %>
